--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <div id="content"></div>
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
-    <script src="http://localhost:8080/dist/bundle.js"></script>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
